--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ feedparser
 requests
 beautifulsoup4
 schedule
+python-telegram-bot==22.5
+feedparser==6.0.12
+requests==2.32.5
+schedule==1.2.2
+openai==1.30.0
+beautifulsoup4==4.12.2
