--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-python-telegram-bot==20.7
+python-telegram-bot==20.3
+requests
 feedparser==6.0.10
-requests==2.32.5
 beautifulsoup4==4.12.2
 aiohttp==3.9.1
 python-dotenv==1.0.0
